Docker/proyectos/Ukiyo_admin/deploy/kubernetes/deploy-admin.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-panel-admin
  namespace: web-cliente
  labels:
    app: panel-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: panel-admin
  template:
    metadata:
      labels:
        app: panel-admin
    spec:
      containers:
      - name: panel-admin
        image: bmleon/ukiyo-admin:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
