Docker/proyectos/Ukiyo_admin/deploy/kubernetes/service-admin.yml
apiVersion: v1
kind: Service
metadata:
  name: service-panel-admin
  namespace: web-cliente
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: panel-admin
