Docker/proyectos/Ukiyo_admin/deploy/kubernetes/ingress-admin.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-panel-admin
  namespace: web-cliente
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: public
  tls:
  - hosts:
    - admin-ukiyo.ukiyocazorla.es
    secretName: ukiyo-tienda-tls
  rules:
  - host: admin-ukiyo.ukiyocazorla.es
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-panel-admin
            port:
              number: 80
